--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>onvention Center Main</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <title> Convention Center Main</title>
+    <link rel="stylesheet" href="Bootstrap/bootstrap.min.css">
 </head>
 <body>
     
-    
+    <h2 class="text-info">Convention Center Main</h2>
 
-    <script src="bootstrap.min.js"></script>
+    <script src="Bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
